src/metrics-alert-manager/overlays/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ingress
spec:
  rules:
  - host: alertmanager.prod.koscom.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: metrics-alert-manager
          servicePort: 9093
